# android_cits

./: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
android_its/: build.gradle
android_its/src/main/: AndroidManifest.xml
android_its/src/main/java/org/ros/android/android_cits/: MainActivity.java
android_its/src/main/java/org/ros/android/android_cits/publisher/: ImuPublisher.java  MagneticFieldPublisher.java  NavSatFixPublisher.java  OrientationPublisher.java  SensorPublisher.java
android_its/src/main/java/org/ros/android/android_cits/subscriber/: NavSatFixSubscriber.java
android_its/src/main/java/org/ros/android/android_cits/utility/: Config.java
android_its/src/main/res/layout/: activity_main.xml  view_config.xml  view_main.xml
android_its/src/main/res/values/: strings.xml  themes.xml
android_its/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
