<?xml version="1.0"?>
<package>
  <name>android_cits</name>
  <version>0.3.1</version>
  <description>
    Android APP for CITS.
  </description>
<!--  <url type="website">http://ros.org/wiki/android_extras</url>-->
<!--  <url type="repository">https://github.com/rosjava/android_extras</url>-->
<!--  <url type="bugtracker">https://github.com/rosjava/android_extras/issues</url>-->
  <author email="ism0705@naver.com">Sumin In</author>
  <maintainer email="ism0705@naver.com">Sumin In</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_extras</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>zeroconf_jmdns_suite</build_depend>
</package>
